--- a/css/style.css
+++ b/css/style.css
@@ -2,18 +2,25 @@
    font-family: 'Turret Road', cursive;
    font-weight: bold;
    font-size: 32px;
+   color: whitesmoke;
 }
 
 .navbar-nav {
    font-family: 'Nunito Sans', sans-serif;
-   font-weight: 200;
-   font-size: 25px;
+   font-weight: 400;
+   font-size: 24px;
+   color: whitesmoke;
+}
+
+.nav-item {
+   margin-left: 15px;
 }
 
 .jumbotron{
    background-image: linear-gradient(to bottom, rgba(0,0,0,0.1), rgba(0,0,0)), url(../img/img-02.jpg) ;
    background-size: cover;
-   height: 500px;
+   height: 550px;
+   margin-top: -75px;
 }
 
 .rounded-circle {
