--- a/css/style.css
+++ b/css/style.css
@@ -68,3 +68,16 @@ a {
 }
 
 
+/* menu */
+.menu {
+   background-color: white;
+   border: solid 1px rgb(216, 226, 226);
+   margin-top: -100px;
+   height: 120px;
+   border-radius: 25px;
+}
+
+.menu img {
+   width: 70px;
+   height: 70px;
+}
