--- a/css/style.css
+++ b/css/style.css
@@ -1,118 +1,62 @@
 body {
    font-family: 'Nunito', sans-serif;
+   background: black;
+   position: relative;
 }
 
 .navbar-brand {
    font-family: 'Turret Road', cursive;
    font-weight: bold;
-   font-size: 32px;
+   font-size: 60px;
    color: whitesmoke;
+   z-index: 2;
 }
 
 .navbar-nav {
    font-family: 'Nunito Sans', sans-serif;
    font-weight: 400;
-   font-size: 24px;
+   font-size: 20px;
    color: whitesmoke;
 }
 
 .nav-item {
    margin-left: 15px;
+   z-index: 2;
 }
 
 /* jumbotron */
 
 .jumbotron{
-   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.37), rgba(0,0,0,1)), url(../img/img-02.jpg) ;
+   background-image:url(../img/img-02.jpg) ;
    background-size: cover;
-   height: 600px;
-   margin-top: -75px;
+   height: 726px;
+   margin-top: -120px;
+   position: relative;
 }
 
 .display-4 {
-   font-size: 45px;
-   margin-top: 70px;
+   font-size: 84px;
+   font-family: 'Nunito sans',sans-serif;
+   color: #D1C2C2;
+   font-weight: 1000;
+   margin-top: 170px;
+   z-index: 2;
+   position: relative;    
 }
 
-.display-4  span{
-   font-weight: bold;
-   font-family: 'Arial',sans-serif;
+#m {
+   color: #CC1111;
 }
 
-.merah {
-   text-transform: uppercase;
-   background-color: linear-gradient(to left, rgb(32, 2, 2) rgb(129, 27, 27));
-   border-radius: 25px;
+#p {
+   color:#BC4646;
 }
 
-/* profil */
-.propil {
-   text-align: center;
-   color: white;
-   margin-top: 120px;
-   font-size: 12px;
-}
-
-.propil img {
-   height: 220px;
-   width: 220px;
-   border: solid white 5px;
-}
-
-.propil > h5 {
-   font-size: 30px;
-   font-weight: 5px;
-}
-
-a {
-   color: white;
-}
-
-
-/* menu */
-.menu {
-   background-color: white;
-   border: solid 1px rgb(216, 226, 226);
-   margin-top: -100px;
-   height: 120px;
-   border-radius: 25px;
-}
-
-.menu img {
-   width: 70px;
-   height: 70px;
-}
-
-
-
-
-
-
-/* Mobile Version */
-
-@media only screen and (max-width :900px ) {
-   .navbar {
-      background-color: rgb(17, 11, 11);
-   }
-
-   .jumbotron {
-      height: 400px;
-   }
-
-   .display-4 {
-      font-size: 25px;
-   }
-
-   .propil {
-      margin-bottom: 50px;
-   }
-
-   .propil img {
-      width: 100px;
-      height: 100px;
-   }
-
-   .menu {
-      margin-top: 5px;;
-   }
+.layer {
+   width: 100%;
+   height:767px;
+   background: linear-gradient(to bottom,#141313,#000000);
+   position: absolute;
+   top: 0;
+   opacity: 70%;
 }
