--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
    font-family: 'Nunito sans',sans-serif;
    color: #D1C2C2;
    font-weight: 1000;
-   margin-top: 170px;
+   margin-top: 100px;
    z-index: 2;
    position: relative;    
 }
@@ -52,11 +52,24 @@ body {
    color:#BC4646;
 }
 
+.btn-transparan {
+   position: relative;
+   z-index: 1;
+   border: solid white 3px;
+   border-radius: 28px;
+   width: 240px;
+   height: 58px;
+   font-family: 'nunito sans', sans-serif;
+   font-size: 26px;
+   color: #D1C2C2;
+   margin-left: 20px;
+}
+
 .layer {
    width: 100%;
    height:767px;
-   background: linear-gradient(to bottom,#141313,#000000);
+   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.37), rgb(0, 0, 0));
    position: absolute;
    top: 0;
-   opacity: 70%;
+   opacity: 100%;
 }
