--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,5 @@
 body {
    font-family: 'Nunito', sans-serif;
-   background: black;
    position: relative;
 }
 
@@ -20,8 +19,10 @@ body {
 }
 
 .nav-item {
-   margin-left: 15px;
+   margin-left: 30px;
    z-index: 2;
+   text-transform: uppercase;
+   font-weight: bold;
 }
 
 /* jumbotron */
@@ -71,14 +72,14 @@ body {
    border: none;
 }
 
-.text, a {
+.text{
    position: relative;
    z-index: 1;
    color: #F8F5F5;
    font-weight: bold;
 }
 
-a:hover {
+.github:hover {
    font-size: 20px;
    font-weight: bold;
    color: #F8F5F5;
@@ -87,9 +88,15 @@ a:hover {
 
 .layer {
    width: 100%;
-   height:767px;
+   height:718px;
    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.37), rgb(0, 0, 0));
    position: absolute;
    top: 0;
    opacity: 100%;
+}
+
+.container-fluid {
+   height: 1900px;
+   background: linear-gradient(to bottom,#000000   ,#15ADE6);
+   margin-top: -32px;
 }
