--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body {
    font-size: 80px;
    font-family: 'Nunito sans',sans-serif;
    color: #D1C2C2;
-   font-weight:1000;
+   font-weight:black;
    margin-top: 100px;
    z-index: 2;
    position: relative;    
