--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
    font-family: 'Raleway', sans-serif;
    position: relative;
+   background: linear-gradient(to bottom,#000000   ,#15ADE6);
 }
 
 .navbar-brand {
@@ -97,12 +98,11 @@ body {
 
 .container-fluid {
    height: 1900px;
-   background: linear-gradient(to bottom,#000000   ,#15ADE6);
    margin-top: -32px;
 }
 
 #profil, #kotak {
-   height: 650px;
+   width: 100%;
 }
 
 .rounded-circle {
@@ -142,11 +142,14 @@ hr {
 
 }
 
+#kotak {
+   background: rgba(11,12,12,0.4);
+}
+
 .kotak {
    width: 352px;
    height: 364px;
    background: linear-gradient( to bottom, #1C9C9C, rgba(29,156,156,0) );
-   margin-top: 100px;
 }
 
 .kotak img {
@@ -177,4 +180,15 @@ hr {
    background: #0CE9F1;
    color: black ;
    border: none;
+}
+
+#kotak h1 {
+   color: #F6F6F6 ;
+   font-size:70px ;
+   font-weight: 1000;
+}
+
+#kotak h5 {
+   color: #F6F6F6 ;
+   font-size:40px ;
 }
