--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ body {
 /* jumbotron */
 
 .jumbotron{
-   background-image:url(../img/img-02.jpg) ;
+   background: rgb(15, 184, 196);
    background-size: cover;
    height: 726px;
    margin-top: -120px;
@@ -88,10 +88,10 @@ body {
 .layer {
    width: 100%;
    height:718px;
-   background: linear-gradient(to bottom, rgba(0, 0, 0, 0.37), rgb(0, 0, 0));
+   background: linear-gradient(to top, rgba(0, 0, 0, 0.37), rgb(0, 0, 0));
    position: absolute;
    top: 0;
-   opacity: 100%;
+   opacity: 90%;
 }
 
 /* Main content */
