--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+   .active-btn {
+      @apply bg-green-600 !important;
+   }
+}
