--- a/public/css/main.css
+++ b/public/css/main.css
@@ -504,11 +504,36 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .active-btn {
   --tw-bg-opacity: 1 !important;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity)) !important;
+  background-color: rgb(167 9 208 / var(--tw-bg-opacity)) !important;
 }
 
 .active {
   display: block !important;
+}
+
+@-webkit-keyframes scale {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
+
+@keyframes scale {
+  0% {
+    transform: translateY(-100%) scaleY(0);
+  }
+
+  100% {
+    transform: translateY(0) scaleY(1);
+  }
+}
+
+.active {
+  -webkit-animation: scale 1s ease-in-out;
+          animation: scale 1s ease-in-out;
 }
 
 .section {
@@ -1626,9 +1651,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
 }
 
-.bg-gray-700 {
+.bg-neon-blue {
   --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  background-color: rgb(22 170 252 / var(--tw-bg-opacity));
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
@@ -1650,6 +1675,43 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .bg-\[url\(\"\.\.\.\"\)\2c url\(\"\.\.\.\"\)\] {
   background-image: url("..."),url("...");
+}
+
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-br {
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-t {
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
+}
+
+.from-neon-blue {
+  --tw-gradient-from: #16AAFC;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(22 170 252 / 0));
+}
+
+.via-purple-500 {
+  --tw-gradient-stops: var(--tw-gradient-from), #a855f7, var(--tw-gradient-to, rgb(168 85 247 / 0));
+}
+
+.via-neon-pink {
+  --tw-gradient-stops: var(--tw-gradient-from), #A709D0, var(--tw-gradient-to, rgb(167 9 208 / 0));
+}
+
+.to-neon-pink {
+  --tw-gradient-to: #A709D0;
+}
+
+.to-purple-700 {
+  --tw-gradient-to: #7e22ce;
+}
+
+.to-purple-400 {
+  --tw-gradient-to: #c084fc;
 }
 
 .decoration-slice {
@@ -2129,6 +2191,31 @@ Ensure the default browser behavior of the `hidden` attribute.
   --tw-shadow: var(--tw-shadow-colored);
 }
 
+.shadow-neon-blue\/70 {
+  --tw-shadow-color: rgb(22 170 252 / 0.7);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-cyan-500\/50 {
+  --tw-shadow-color: rgb(6 182 212 / 0.5);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-neon-pink\/80 {
+  --tw-shadow-color: rgb(167 9 208 / 0.8);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-neon-pink\/90 {
+  --tw-shadow-color: rgb(167 9 208 / 0.9);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
+.shadow-neon-pink\/95 {
+  --tw-shadow-color: rgb(167 9 208 / 0.95);
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2243,16 +2330,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 150ms;
 }
 
+.ease-in-out {
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .ease-in {
   transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
 }
 
 .ease-out {
   transition-timing-function: cubic-bezier(0, 0, 0.2, 1);
-}
-
-.ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .content-\[\'hello\'\] {
@@ -2280,11 +2367,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .\[content\:\"hello\"\] {
   content: "hello";
-}
-
-.hover\:bg-green-600:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
 
 .hover\:font-bold:hover {
@@ -2347,6 +2429,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   .sm\:underline {
     -webkit-text-decoration-line: underline;
             text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:bg-gradient-to-br {
+    background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+  }
+
+  .md\:bg-gradient-to-r {
+    background-image: linear-gradient(to right, var(--tw-gradient-stops));
+  }
+
+  .md\:bg-gradient-to-l {
+    background-image: linear-gradient(to left, var(--tw-gradient-stops));
   }
 }
 
