--- a/src/css/index.css
+++ b/src/css/index.css
@@ -4,7 +4,8 @@
 
 @layer components {
    .active-btn {
-      @apply bg-neon-pink !important;
+      box-shadow: inset -5px 5px 10px #0a0f1b,
+                  inset 5px -5px 10px #141f39 !important;
    }
 
    .active {
@@ -14,5 +15,12 @@
 
    .section {
       @apply hidden ;
+   }
+}
+
+@layer utilities {
+   .neuro-effect {
+      box-shadow: -6px 6px 12px #0a0f1b,
+                  6px -6px 12px #141f39;
    }
 }
