--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1919,6 +1919,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 22px;
 }
 
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -2001,6 +2006,58 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .leading-\[1\.2\] {
   line-height: 1.2;
+}
+
+.leading-\[1\.3\] {
+  line-height: 1.3;
+}
+
+.leading-\[1\.4\] {
+  line-height: 1.4;
+}
+
+.leading-\[1\.5\] {
+  line-height: 1.5;
+}
+
+.leading-\[1\.8\] {
+  line-height: 1.8;
+}
+
+.leading-\[2\] {
+  line-height: 2;
+}
+
+.leading-\[3\] {
+  line-height: 3;
+}
+
+.leading-relaxed {
+  line-height: 1.625;
+}
+
+.leading-10 {
+  line-height: 2.5rem;
+}
+
+.leading-\[5\] {
+  line-height: 5;
+}
+
+.leading-none {
+  line-height: 1;
+}
+
+.leading-\[40px\] {
+  line-height: 40px;
+}
+
+.leading-\[2\.5\] {
+  line-height: 2.5;
+}
+
+.leading-\[10\] {
+  line-height: 10;
 }
 
 .text-gray-300 {
@@ -2502,6 +2559,36 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
+  }
+
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  .md\:text-\[1\.7rem\] {
+    font-size: 1.7rem;
+  }
+
+  .md\:text-\[1\.8rem\] {
+    font-size: 1.8rem;
+  }
+
+  .md\:text-\[1\.85rem\] {
+    font-size: 1.85rem;
+  }
+
+  .md\:text-\[1\.87rem\] {
+    font-size: 1.87rem;
+  }
+
+  .md\:font-medium {
+    font-weight: 500;
   }
 }
 
