--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2596,6 +2596,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     font-size: 1.87rem;
   }
 
+  .md\:text-4xl {
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+
+  .md\:text-5xl {
+    font-size: 3rem;
+    line-height: 1;
+  }
+
   .md\:font-medium {
     font-weight: 500;
   }
