--- a/public/css/main.css
+++ b/public/css/main.css
@@ -544,6 +544,26 @@ Ensure the default browser behavior of the `hidden` attribute.
   display: none;
 }
 
+.title {
+  text-align: center;
+}
+
+.text-content {
+  position: relative;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.text-bg {
+  position: absolute;
+  color: rgb(167 9 208 / 1);
+  z-index: -10;
+  font-weight: 800;
+  left: 0px;
+  right: 0px;
+  top: 50%;
+}
+
 .sr-only {
   position: absolute;
   width: 1px;
@@ -616,24 +636,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   right: 0px;
 }
 
-.right-3 {
-  right: 0.75rem;
-}
-
-.top-\[50\%\] {
-  top: 50%;
-}
-
 .bottom-0 {
   bottom: 0px;
 }
 
-.bottom-4 {
-  bottom: 1rem;
+.left-3 {
+  left: 0.75rem;
 }
 
-.bottom-5 {
-  bottom: 1.25rem;
+.bottom-7 {
+  bottom: 1.75rem;
 }
 
 .isolate {
@@ -642,6 +654,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .isolation-auto {
   isolation: auto;
+}
+
+.z-0 {
+  z-index: 0;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .order-first {
@@ -780,6 +804,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100vh;
 }
 
+.h-\[100\%\] {
+  height: 100%;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -790,6 +818,16 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-\[calc\(100\%-theme\(\"spacing\.1\"\)\)\] {
   height: calc(100% - 0.25rem);
+}
+
+.w-\[70\%\] {
+  width: 70%;
+}
+
+.w-max {
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
 }
 
 .w-12 {
@@ -1290,16 +1328,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   justify-items: stretch;
 }
 
+.gap-0 {
+  gap: 0px;
+}
+
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-5 {
-  gap: 1.25rem;
 }
 
 .space-y-reverse > :not([hidden]) ~ :not([hidden]) {
@@ -1684,8 +1718,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-neon-blue\/60 {
-  background-color: rgb(22 170 252 / 0.6);
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
 .bg-\[url\(\'\.\.\.\'\)\] {
@@ -1704,13 +1738,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: url("..."),url("...");
 }
 
-.from-neon-pink {
-  --tw-gradient-from: #A709D0;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(167 9 208 / 0));
+.from-neon-blue {
+  --tw-gradient-from: #16AAFC;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(22 170 252 / 0));
 }
 
-.to-neon-blue {
-  --tw-gradient-to: #16AAFC;
+.to-neon-pink {
+  --tw-gradient-to: #A709D0;
 }
 
 .decoration-slice {
@@ -1851,6 +1885,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 0.5rem;
 }
 
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .px-1\.5 {
   padding-left: 0.375rem;
   padding-right: 0.375rem;
@@ -1932,6 +1971,21 @@ Ensure the default browser behavior of the `hidden` attribute.
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
+.text-5xl {
+  font-size: 3rem;
+  line-height: 1;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .text-lg {
@@ -2020,14 +2074,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(209 213 219 / var(--tw-text-opacity));
 }
 
-.text-neon-pink {
-  --tw-text-opacity: 1;
-  color: rgb(167 9 208 / var(--tw-text-opacity));
+.text-neon-blue\/60 {
+  color: rgb(22 170 252 / 0.6);
 }
 
-.text-neon-blue {
-  --tw-text-opacity: 1;
-  color: rgb(22 170 252 / var(--tw-text-opacity));
+.text-neon-pink\/70 {
+  color: rgb(167 9 208 / 0.7);
 }
 
 .text-gray-500 {
@@ -2040,29 +2092,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(203 213 225 / var(--tw-text-opacity));
 }
 
-.text-gray-100 {
+.text-neon-blue {
   --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
-.text-neon-pink\/50 {
-  color: rgb(167 9 208 / 0.5);
-}
-
-.text-neon-blue\/70 {
-  color: rgb(22 170 252 / 0.7);
-}
-
-.text-neon-blue\/50 {
-  color: rgb(22 170 252 / 0.5);
-}
-
-.text-neon-pink\/70 {
-  color: rgb(167 9 208 / 0.7);
-}
-
-.text-neon-blue\/60 {
-  color: rgb(22 170 252 / 0.6);
+  color: rgb(22 170 252 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2305,6 +2337,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
+.grayscale-\[5\] {
+  --tw-grayscale: grayscale(5);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .grayscale {
   --tw-grayscale: grayscale(100%);
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
@@ -2406,6 +2443,11 @@ Ensure the default browser behavior of the `hidden` attribute.
                   6px -6px 12px #141f39;
 }
 
+.hexagon-clip {
+  -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+
 .\[attr\:value\] {
   attr: value;
 }
@@ -2438,11 +2480,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .focus\:hover\:text-center:hover:focus {
   text-align: center;
-}
-
-.active\:active-btn:active {
-  box-shadow: inset -5px 5px 10px #0a0f1b,
-                  inset 5px -5px 10px #141f39 !important;
 }
 
 @media (min-width: 640px) {
@@ -2492,20 +2529,20 @@ Ensure the default browser behavior of the `hidden` attribute.
     bottom: 0px;
   }
 
-  .md\:right-0 {
-    right: 0px;
-  }
-
-  .md\:right-3 {
-    right: 0.75rem;
-  }
-
   .md\:right-5 {
     right: 1.25rem;
   }
 
   .md\:order-last {
     order: 9999;
+  }
+
+  .md\:h-\[60\%\] {
+    height: 60%;
+  }
+
+  .md\:h-\[70\%\] {
+    height: 70%;
   }
 
   .md\:grid-cols-2 {
@@ -2524,8 +2561,8 @@ Ensure the default browser behavior of the `hidden` attribute.
     align-items: center;
   }
 
-  .md\:gap-5 {
-    gap: 1.25rem;
+  .md\:gap-4 {
+    gap: 1rem;
   }
 
   .md\:gap-6 {
@@ -2555,6 +2592,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   .md\:text-base {
     font-size: 1rem;
     line-height: 1.5rem;
+  }
+
+  .md\:text-6xl {
+    font-size: 3.75rem;
+    line-height: 1;
+  }
+
+  .md\:text-8xl {
+    font-size: 6rem;
+    line-height: 1;
   }
 
   .md\:font-medium {
