--- a/public/css/main.css
+++ b/public/css/main.css
@@ -668,10 +668,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   z-index: 30;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .order-first {
   order: -9999;
 }
@@ -746,6 +742,10 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .mt-2 {
   margin-top: 0.5rem;
+}
+
+.mb-5 {
+  margin-bottom: 1.25rem;
 }
 
 .box-border {
@@ -860,6 +860,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   height: 100%;
 }
 
+.h-10 {
+  height: 2.5rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
 .h-12 {
   height: 3rem;
 }
@@ -870,26 +878,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .h-\[calc\(100\%-theme\(\"spacing\.1\"\)\)\] {
   height: calc(100% - 0.25rem);
-}
-
-.h-14 {
-  height: 3.5rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-8 {
-  height: 2rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-6 {
-  height: 1.5rem;
 }
 
 .w-\[70\%\] {
@@ -910,28 +898,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 1rem;
 }
 
-.w-12 {
-  width: 3rem;
-}
-
-.w-14 {
-  width: 3.5rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-6 {
   width: 1.5rem;
+}
+
+.w-12 {
+  width: 3rem;
 }
 
 .flex-shrink {
@@ -1464,10 +1440,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   gap: 2rem;
 }
 
-.gap-5 {
-  gap: 1.25rem;
-}
-
 .gap-1 {
   gap: 0.25rem;
 }
@@ -1916,54 +1888,13 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-color: rgb(22 170 252 / var(--tw-bg-opacity));
 }
 
-.bg-neon-pink\/80 {
-  background-color: rgb(167 9 208 / 0.8);
+.bg-neon-blue\/70 {
+  background-color: rgb(22 170 252 / 0.7);
 }
 
 .bg-\[rgb\(255\2c 0\2c 0\)\] {
   --tw-bg-opacity: 1;
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
-}
-
-.bg-gray-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-}
-
-.bg-slate-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(203 213 225 / var(--tw-bg-opacity));
-}
-
-.bg-gray-700 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(55 65 81 / var(--tw-bg-opacity));
-}
-
-.bg-neon-blue\/50 {
-  background-color: rgb(22 170 252 / 0.5);
-}
-
-.bg-neon-blue\/75 {
-  background-color: rgb(22 170 252 / 0.75);
-}
-
-.bg-neon-pink\/70 {
-  background-color: rgb(167 9 208 / 0.7);
-}
-
-.bg-neon-blue\/70 {
-  background-color: rgb(22 170 252 / 0.7);
 }
 
 .bg-gradient-to-tr {
@@ -2129,10 +2060,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding: 0px;
 }
 
-.p-2 {
-  padding: 0.5rem;
-}
-
 .px-\[5\%\] {
   padding-left: 5%;
   padding-right: 5%;
@@ -2163,19 +2090,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 3rem;
 }
 
-.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-
 .px-1 {
   padding-left: 0.25rem;
   padding-right: 0.25rem;
 }
 
-.py-1 {
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
+.px-1\.5 {
+  padding-left: 0.375rem;
+  padding-right: 0.375rem;
 }
 
 .pt-2 {
@@ -2423,16 +2345,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   color: rgb(248 250 252 / 0.9);
 }
 
-.text-slate-900 {
-  --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
-}
-
-.text-neon-pink {
-  --tw-text-opacity: 1;
-  color: rgb(167 9 208 / var(--tw-text-opacity));
-}
-
 .underline {
   -webkit-text-decoration-line: underline;
           text-decoration-line: underline;
@@ -2490,10 +2402,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .opacity-0 {
   opacity: 0;
-}
-
-.opacity-100 {
-  opacity: 1;
 }
 
 .bg-blend-normal {
@@ -2775,10 +2683,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   transition-duration: 300ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
-}
-
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -2814,6 +2718,18 @@ Ensure the default browser behavior of the `hidden` attribute.
 .hexagon-clip {
   -webkit-clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
   clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+}
+
+.portfolio-layer {
+  position: absolute;
+  z-index: 10;
+  background-color: rgb(167 9 208 / 0.7);
+  width: 100%;
+  height: 16rem;
+  border-radius: 1rem;
+  transition-property: all;
+  transition-duration: 1000ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .\[attr\:value\] {
@@ -2932,10 +2848,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 @media (min-width: 768px) {
-  .md\:absolute {
-    position: absolute;
-  }
-
   .md\:inset-y-0 {
     top: 0px;
     bottom: 0px;
@@ -2949,6 +2861,10 @@ Ensure the default browser behavior of the `hidden` attribute.
     order: 9999;
   }
 
+  .md\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .md\:h-\[60\%\] {
     height: 60%;
   }
@@ -2957,40 +2873,16 @@ Ensure the default browser behavior of the `hidden` attribute.
     height: 70%;
   }
 
-  .md\:h-14 {
-    height: 3.5rem;
-  }
-
-  .md\:h-12 {
-    height: 3rem;
-  }
-
   .md\:h-11 {
     height: 2.75rem;
-  }
-
-  .md\:h-8 {
-    height: 2rem;
   }
 
   .md\:h-7 {
     height: 1.75rem;
   }
 
-  .md\:w-14 {
-    width: 3.5rem;
-  }
-
-  .md\:w-12 {
-    width: 3rem;
-  }
-
   .md\:w-11 {
     width: 2.75rem;
-  }
-
-  .md\:w-8 {
-    width: 2rem;
   }
 
   .md\:w-7 {
@@ -3080,20 +2972,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 
   .md\:leading-loose {
     line-height: 2;
-  }
-
-  .md\:opacity-0 {
-    opacity: 0;
-  }
-
-  .md\:transition-all {
-    transition-property: all;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-    transition-duration: 150ms;
-  }
-
-  .md\:ease-in-out {
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
